Update readme with usage examples

--- a/README
+++ b/README
@@ -1,1 +1,13 @@
-This file was created by IntelliJ IDEA (Leda) IU-122.813 for binding GitHub repository
+Simple benchmark framework for scala using anonymous functions. 
+
+Usage:
+    benchmark {
+      // insert operation here
+    }()
+
+If you want to specify an amount of times to run the operation:
+  benchmark {
+    // insert operation here
+  }(times = 100)
+
+That's all!
